--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <!--
 	Read Only by HTML5 UP
-	html5up.net | @ajlkn　　テストテストテストテスト
+	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
@@ -22,7 +22,7 @@
     <nav id="nav">
         <ul>
             <li><a href="#one" class="active">Japan Git User Groupとは</a></li>
-            <li><a href="#two">イベントのお知らせ　テスト    </a></li>
+            <li><a href="#two">イベントのお知らせ　fetch→margeのテスト  </a></li>
             <li><a href="#three">過去のイベント</a></li>
         </ul>
     </nav>
