--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
             <li><a href="#one" class="active">Japan Git User Groupとは</a></li>
             <li><a href="#two">イベントのお知らせ　fetch→margeのテスト  再度</a></li>
-            <li><a href="#three">過去のイベント 競合</a></li>
+            <li><a href="#three">過去のイベント ブランチテスト</a></li>
         </ul>
     </nav>
 </section>
