不要なファイルを削除

--- a/test/index2.html
+++ b/test/index2.html
@@ -1,6 +1,6 @@
 <!-- コミットします 1回目-->
 <!-- コミットします 2回目-->
-<!-- コミットします 3回目-->あああああ
+<!-- コミットします 3回目-->あああああいいいい
 <!DOCTYPE HTML>
 <!--
 	Read Only by HTML5 UP
