index2をコミット

--- a/test/index2.html
+++ b/test/index2.html
@@ -1,6 +1,7 @@
 <!-- コミットします 1回目-->
 <!-- コミットします 2回目-->
 <!-- コミットします 3回目-->あああああいいいい
+<!-- コミットします 4回目-->
 <!DOCTYPE HTML>
 <!--
 	Read Only by HTML5 UP
