５回目のコミット

--- a/test/index2.html
+++ b/test/index2.html
@@ -2,6 +2,7 @@
 <!-- コミットします 2回目-->
 <!-- コミットします 3回目-->あああああいいいい
 <!-- コミットします 4回目-->
+<!-- コミットします ５回目-->
 <!DOCTYPE HTML>
 <!--
 	Read Only by HTML5 UP
