５回目のコミット

--- a/test/index2.html
+++ b/test/index2.html
@@ -3,6 +3,7 @@
 <!-- コミットします 3回目-->あああああいいいい
 <!-- コミットします 4回目-->
 <!-- コミットします ５回目-->
+<!-- コミットします ６回目-->
 <!DOCTYPE HTML>
 <!--
 	Read Only by HTML5 UP
