gitからコミット
gitからコミット

--- a/test/index2.html
+++ b/test/index2.html
@@ -4,6 +4,7 @@
 <!-- コミットします 4回目-->
 <!-- コミットします ５回目-->
 <!-- コミットします ６回目-->
+<!-- コミットします ９回目-->　gitからコミット
 <!DOCTYPE HTML>
 <!--
 	Read Only by HTML5 UP
